Release scripts for maven and small changes